--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -93,6 +93,7 @@
 
         color: $white;
         border-right: 1px solid rgba(255, 255, 255, 0.2);
+
         h6 {
             font-size: 16px;
             font-weight: 700px;
@@ -112,7 +113,7 @@
                 }
             }
         }
-       
+
     }
 
     .footer-middle-right {
@@ -177,34 +178,125 @@
         }
     }
 }
-.payment-social{
+
+.payment-social {
     padding: 35px 0;
-    .payment{
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
+    .container {
         display: flex;
         align-items: center;
-        p{
-            color: $white;
-            margin-right: 8%;
+        justify-content: space-between;
+
+        .payment {
+            display: flex;
+            align-items: center;
+
+            p {
+                color: $white;
+                margin-right: 70px;
+            }
         }
-    }
-    .social{
-        display: flex;
-        align-items: center;
-        p{
-            color: $white;
-            margin-right: 8%;
-        }
-        ul{
-            li{
-                a{
+
+        .social {
+            display: flex;
+            align-items: center;
+
+
+            p {
+                color: $white;
+                margin-right: 40px;
+            }
+
+            ul {
+                display: flex;
+                align-items: center;
+
+                li {
+                    margin-left: 22px;
                     color: $white;
-                    transition: all 0.2s ease-in-out;
-        
-                    &:hover {
-                        opacity: 0.5;
+
+                    a {
+                        color: $white;
+                        transition: all 0.2s ease-in-out;
+                        position: relative;
+
+                        &:hover{
+                            color: rgba(255, 255, 255, 0.5);
+                        }
+
+                        .tooltiptext {
+                            visibility: hidden;
+                            background-color: $white;
+                            color: $black;
+                            text-align: center;
+                            padding: 5px 10px;
+                            font-size: 12px;
+
+                            /* Position the tooltip */
+                            position: absolute;
+                            z-index: 1;
+                            top: 120%;
+                            left: 100%;
+                            // transition: all 0.8s ease-in;
+                            // margin-left: -60px;
+                        }
+
+
+                        &:hover .tooltiptext {
+                            transition-delay: 1s;
+                            visibility: visible;
+                        }
                     }
+
+
                 }
             }
+        }
+    }
+
+
+}
+
+.footer-bottom {
+    padding: 35px 0;
+
+    .terms-privacy {
+        display: flex;
+        align-items: center;
+
+        li {
+            margin-right: 35px;
+
+            a {
+                color: $white;
+                font-size: 14px;
+                transition: all 0.2s ease-in-out;
+
+                &:hover {
+                    opacity: 0.5;
+                }
+            }
+        }
+    }
+
+    .copyright {
+        padding: 25px 0;
+        color: $white;
+        font-size: 14px;
+    }
+
+    .footer-description {
+        small {
+            max-width: 820px;
+            display: inline-block;
+            width: 100%;
+            color: rgba(255, 255, 255, 0.4);
+            font-size: 12px;
+        }
+
+        small:first-child {
+            padding-bottom: 25px;
         }
     }
 }
