--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -14,11 +14,30 @@
         font-size: 32px;
         font-weight: 600;
         color: $white;
+
+        @media (max-width: 991px) {
+            max-width: 500px;
+            font-size: 26px;
+        }
+
+        @media (max-width: 576px) {
+            max-width: 400px;
+            font-size: 20px;
+        }
+
+        @media (max-width: 360px) {
+            max-width: 400px;
+            font-size: 18px;
+        }
     }
 }
 
 .email-subscribe {
     padding-top: 20px;
+
+    @media (max-width: 768px) {
+        margin-left: 10%;
+    }
 
     input {
         max-width: 400px;
@@ -27,6 +46,15 @@
         border-radius: 4px;
         border: none;
         outline: none;
+
+        @media (max-width: 991px) {
+            max-width: 330px;
+        }
+
+        @media (max-width: 768px) {
+            max-width: 90%;
+            display: block;
+        }
     }
 
     input,
@@ -48,14 +76,31 @@
             background-color: $theme-color;
             color: $white;
         }
+
+        @media (max-width: 991px) {
+            padding: 11px 25px;
+        }
+
+        @media (max-width: 768px) {
+            margin-top: 8px;
+            display: block;
+        }
+
+        @media (max-width: 576px) {
+            width: 90%;
+        }
     }
 }
 
 .footer-middle {
-    padding: 75px 70px 100px;
+    padding: 75px 0px 100px;
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 
     .footer-middle-left {
+        @media (max-width: 1400px) {
+            display: none;
+        }
+
         h3 {
             font-size: 26px;
             color: $white;
@@ -94,10 +139,21 @@
         color: $white;
         border-right: 1px solid rgba(255, 255, 255, 0.2);
 
+        @media (max-width: 768px) {
+            border-right: none;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+            padding-bottom: 15px;
+        }
+
         h6 {
             font-size: 16px;
             font-weight: 700px;
             margin-bottom: 25px;
+
+
+            // @media (max-width: 576px) {
+            //     font-size: 14px;
+            //   }
         }
 
         li {
@@ -111,6 +167,10 @@
                 &:hover {
                     opacity: 0.5;
                 }
+
+                @media (max-width: 576px) {
+                    font-size: 12px;
+                }
             }
         }
 
@@ -121,6 +181,10 @@
             // max-width: 185px;
             color: $white;
             padding-top: 25px;
+
+            @media (max-width: 768px) {
+                max-width: 250px;
+            }
         }
 
         .phone-number {
@@ -133,11 +197,21 @@
                 color: $white;
                 font-size: 25px;
                 margin-right: 10%;
+
+                @media (max-width: 768px) {
+                    font-size: 20px;
+                    margin-right: 2%;
+                }
             }
 
             p {
                 color: $white;
                 font-size: 22px;
+                font-size: 20px;
+
+                @media (max-width: 400px) {
+                    font-size: 18px;
+                }
             }
         }
 
@@ -151,6 +225,10 @@
                 color: $theme-color;
                 border-radius: 4px;
                 transition: all .3s ease-in-out;
+                @media (max-width: 576px) {
+                    font-size: 14px;
+                    
+                }
 
                 &:hover {
                     background-color: $theme-color;
@@ -187,14 +265,35 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @media (max-width: 768px) {
+            flex-direction: column-reverse;
+            align-items: start;
+            row-gap: 35px;
+
+        }
 
         .payment {
             display: flex;
             align-items: center;
 
+            @media (max-width: 1200px) {
+                flex-direction: column;
+                align-items: start;
+                row-gap: 12px;
+
+            }
+
             p {
                 color: $white;
                 margin-right: 70px;
+
+                @media (max-width: 1200px) {
+                    margin-right: 0px;
+                }
+
+                @media (max-width: 991px) {
+                    font-size: 14px;
+                }
             }
         }
 
@@ -206,6 +305,11 @@
             p {
                 color: $white;
                 margin-right: 40px;
+
+                @media (max-width: 991px) {
+                    margin-right: 0px;
+                    font-size: 14px;
+                }
             }
 
             ul {
@@ -216,12 +320,16 @@
                     margin-left: 22px;
                     color: $white;
 
+                    @media (max-width: 991px) {
+                        margin-left: 12px;
+                    }
+
                     a {
                         color: $white;
                         transition: all 0.2s ease-in-out;
                         position: relative;
 
-                        &:hover{
+                        &:hover {
                             color: rgba(255, 255, 255, 0.5);
                         }
 
@@ -238,6 +346,13 @@
                             z-index: 1;
                             top: 120%;
                             left: 100%;
+
+                            @media (max-width: 991px) {
+                                padding: 5px 4px;
+                                font-size: 10px;
+                                left: 10%;
+                            }
+
                             // transition: all 0.8s ease-in;
                             // margin-left: -60px;
                         }
@@ -260,11 +375,17 @@
 
 .footer-bottom {
     padding: 35px 0;
+    @media (max-width: 768px) {
+        padding: 35px 0 0;
+        
+    }
 
     .terms-privacy {
         display: flex;
         align-items: center;
-
+        @media (max-width: 768px) {
+            flex-direction: column;
+        }
         li {
             margin-right: 35px;
 
@@ -284,6 +405,15 @@
         padding: 25px 0;
         color: $white;
         font-size: 14px;
+        @media (max-width: 768px) {
+            text-align: center;
+            padding: 25px 0 0;
+            
+        }
+        @media (max-width: 576px) {
+            font-size: 12px;
+
+        }
     }
 
     .footer-description {
@@ -293,6 +423,10 @@
             width: 100%;
             color: rgba(255, 255, 255, 0.4);
             font-size: 12px;
+            @media (max-width: 768px) {
+                display: none;
+                
+            }
         }
 
         small:first-child {
