--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -69,12 +69,13 @@ img {
 
 .header-area {
   position: relative;
+  background: #FFFAF5;
 }
 
 .header-top {
-  background: #FFFAF5;
   padding: 10px 0;
   position: relative;
+  border-bottom: 2px solid #fff;
 }
 .header-top .top-title {
   font-size: 14px;
@@ -100,12 +101,40 @@ img {
   transform: rotate(90deg);
 }
 
+.middle-wrapper {
+  display: flex;
+  align-items: center;
+  padding: 20px 0 40px 0;
+}
+.middle-wrapper .middle-left {
+  display: flex;
+  align-items: center;
+  width: 75%;
+  justify-content: space-between;
+}
+.middle-wrapper .middle-right {
+  width: 24.7%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+}
+.middle-wrapper .middle-right li {
+  margin: 0 10px;
+  color: #091727;
+}
+.middle-wrapper .middle-right li span {
+  margin: 0 2px;
+}
+
 .product-search-wrap select {
   max-width: 140px;
   width: 100%;
   min-height: 48px;
   height: 48px;
   padding: 0 15px;
+  outline: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 .product-search-wrap #category {
   background: url("data:image/svg+xml,<svg height='10px' width='10px' viewBox='0 0 16 16' fill='%23000000' xmlns='http://www.w3.org/2000/svg'><path d='M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z'/></svg>") no-repeat white;
@@ -114,15 +143,26 @@ img {
   -webkit-appearance: none !important;
   appearance: none !important;
 }
+.product-search-wrap #category option, .product-search-wrap #category optgroup {
+  font-size: 14px;
+  color: #091727;
+  font-weight: 300;
+}
 .product-search-wrap .product-search-input {
   position: relative;
 }
 .product-search-wrap .product-search-input input {
-  min-width: 525px;
+  min-width: 425px;
   width: 100%;
   min-height: 48px;
   height: 48px;
   padding: 15px;
+  outline: none;
+  border-radius: 0px;
+  border: 1px solid;
+  border-left: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .product-search-wrap .product-search-input .search-icon {
   position: absolute;
@@ -135,4 +175,13 @@ img {
 }
 .product-search-wrap .product-search-input .search-icon:hover {
   color: #FF5B2E;
+}
+
+.dropdown-hover:hover > .dropdown-menu {
+  display: inline-block;
+}
+
+.dropdown-hover > .dropdown-toggle:active {
+  /*Without this, clicking will make it sticky*/
+  pointer-events: none;
 }/*# sourceMappingURL=style.css.map */
