--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -12,6 +12,7 @@
 @import "components/section-title";
 
 @import "layout/header";
+@import "layout/header-joy";
 @import "layout/hero-slider";
 @import "layout/footer";
 
