--- a/assets/sass/components/_section-title.scss
+++ b/assets/sass/components/_section-title.scss
@@ -1,4 +1,16 @@
 
+.section-title {
+    h4 {
+        font-size: 36px;
+        line-height: 45px;
+        padding-bottom: 20px;
+        color: $theme-font;
+        font-weight: 700;
+    }
+}
+
+
+
 .section-padding {
     padding-top: 80px;
     padding-bottom: 40px;
