--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -10,6 +10,7 @@
 
 @import "components/button";
 @import "components/section-title";
+@import "components/card";
 
 @import "layout/header";
 @import "layout/hero-slider";
@@ -17,6 +18,7 @@
 
 
 //page
+@import "page/home";
 
 
 
