--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -1,6 +1,36 @@
-
 //
 
+
+
+.common-button {
+    background-color: $theme-color;
+    border: none;
+    color:  $white;
+    font-weight: 600;
+    padding: 11px 36px;
+    border-radius: 4px;
+    transition: all .3s ease-in-out;
+    border: 1px solid rgba($color: $theme-color, $alpha: 0.2);
+    display: inline-block;
+    &:hover {
+        background-color: $primary-bg;
+        color: $theme-color;
+        border: 1px solid rgba($color: #000000, $alpha: 0.2);
+    }
+
+    // @media (max-width: 991px) {
+    //     padding: 11px 25px;
+    // }
+
+    // @media (max-width: 768px) {
+    //     margin-top: 8px;
+    //     display: block;
+    // }
+
+    // @media (max-width: 576px) {
+    //     width: 90%;
+    // }
+}
 
 
 
@@ -9,7 +39,3 @@
 
 
 // button for blog page 
-
-
-
-
