--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -12,15 +12,14 @@
 @import "components/section-title";
 @import "components/card";
 
-@import "layout/header";
-@import "layout/header-joy";
+@import "layout/ecommarce_header-joy";
 @import "layout/hero-slider";
 @import "layout/footer";
 
 
 //page
-@import "pages/home";
-@import "pages/shopPage"
+@import "pages/ecommarce_home";
+@import "pages/ecommarce_shopPage"
 
 
 
