--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -3067,6 +3067,260 @@ img {
   padding-bottom: 25px;
 }
 
+.shop-category-area {
+  background: #ebf0f5;
+}
+.shop-category-area .food-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+@media (max-width: 340px) {
+  .shop-category-area .food-list {
+    -moz-column-gap: 5px;
+         column-gap: 5px;
+  }
+}
+.shop-category-area .food-list li {
+  margin-bottom: 30px;
+}
+.shop-category-area .food-list li a img {
+  border-radius: 50%;
+  max-height: 150px;
+  max-width: 150px;
+  background: #fff;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 340px) {
+  .shop-category-area .food-list li a img {
+    max-width: 140px;
+    max-height: 140px;
+  }
+}
+.shop-category-area .food-list li a .food-name {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.delivery-area .slick-slider {
+  margin: 0 -5px;
+}
+.delivery-area .slick-slide {
+  margin: 0 5px;
+}
+.delivery-area .delivery-card-active button {
+  background: #FFFAF5;
+  color: #091727;
+  position: absolute;
+  top: -50px;
+  height: 30px;
+  width: 40px;
+  border: 1px solid #091727;
+  line-height: 30px;
+  font-size: 20px;
+  transition: all 0.3s ease;
+}
+.delivery-area .delivery-card-active button:hover {
+  background: #FF5B2E;
+  color: #fff;
+  border: 1px solid #FF5B2E;
+}
+.delivery-area .delivery-card-active .pull-left {
+  right: 50px;
+}
+.delivery-area .delivery-card-active .pull-right {
+  right: 5px;
+}
+
+.featured-product-area {
+  background: #ebf0f5;
+}
+
+.discount-banner-area {
+  padding-top: 40px;
+}
+
+.banner-img-text {
+  padding: 30px;
+  background-position: top right;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  max-height: 340px;
+  border-radius: 5px;
+}
+
+.food-brand {
+  padding-bottom: 20px;
+}
+.food-brand img {
+  max-width: 150px;
+}
+@media (max-width: 991px) {
+  .food-brand img {
+    max-width: 100px;
+  }
+}
+
+.food-title {
+  font-size: 32px;
+  font-weight: 700;
+  width: 50%;
+  line-height: 40px;
+  margin-bottom: 10px;
+}
+@media (max-width: 991px) {
+  .food-title {
+    font-size: 27px;
+    font-weight: 500;
+    width: 100%;
+  }
+}
+
+.discount-amount {
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 20px;
+  display: block;
+}
+
+.discount-amount-title {
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 56px;
+}
+
+.food-title-second {
+  font-size: 30px;
+  font-weight: 700;
+  width: 70%;
+  line-height: 40px;
+  margin-bottom: 10px;
+}
+@media (max-width: 991px) {
+  .food-title-second {
+    font-size: 22px;
+    width: 100%;
+    line-height: 32px;
+  }
+}
+
+.amount-start {
+  font-size: 30px;
+  color: #fff;
+  font-weight: 600;
+  padding: 20px 18px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  display: inline-block;
+  line-height: 32px;
+}
+.amount-start .start-from {
+  font-size: 14px;
+  color: #fff;
+  display: block;
+  font-weight: 300;
+  line-height: 20px;
+}
+@media (max-width: 991px) {
+  .amount-start .start-from {
+    font-size: 13px;
+  }
+}
+@media (max-width: 991px) {
+  .amount-start {
+    padding: 10px;
+    font-size: 22px;
+  }
+}
+
+.brand-logo {
+  display: block;
+  font-size: 15px;
+  color: #fff;
+  font-weight: 300;
+  padding-bottom: 90px;
+}
+.brand-logo img {
+  width: 15px;
+  margin-right: 10px;
+}
+
+.second-banner {
+  padding: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  height: 100%;
+  max-height: 320px;
+  text-align: right;
+  display: flex;
+  justify-content: end;
+}
+
+.second-banner-conten {
+  width: 50%;
+  text-align: center;
+  position: relative;
+}
+@media (max-width: 991px) {
+  .second-banner-conten {
+    width: 100%;
+    text-align: end;
+  }
+}
+.second-banner-conten .logo-img {
+  max-width: 150px;
+  text-align: center;
+  display: inline;
+}
+.second-banner-conten .logo-img img {
+  max-width: 150px;
+  margin-bottom: 20px;
+}
+@media (max-width: 991px) {
+  .second-banner-conten .logo-img img {
+    max-width: 130px;
+    margin-bottom: 10px;
+  }
+}
+.second-banner-conten .little-paw-text {
+  font-size: 28px;
+  color: #fff;
+  line-height: 32px;
+  font-weight: 700;
+  margin: 15px 0;
+  padding-bottom: 100px;
+}
+@media (max-width: 991px) {
+  .second-banner-conten .little-paw-text {
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
+.second-banner-conten .discount-text {
+  position: absolute;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -35%;
+}
+@media (max-width: 991px) {
+  .second-banner-conten .discount-text {
+    right: 0;
+    bottom: 50%;
+  }
+}
+
+.second-small-banner {
+  display: block;
+  text-align: left;
+}
+
 .food-bannar {
   height: 100%;
   width: 100%;
@@ -3520,6 +3774,260 @@ img {
   .about-right img {
     height: 400px;
   }
+}
+
+.shop-category-area {
+  background: #ebf0f5;
+}
+.shop-category-area .food-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+@media (max-width: 340px) {
+  .shop-category-area .food-list {
+    -moz-column-gap: 5px;
+         column-gap: 5px;
+  }
+}
+.shop-category-area .food-list li {
+  margin-bottom: 30px;
+}
+.shop-category-area .food-list li a img {
+  border-radius: 50%;
+  max-height: 150px;
+  max-width: 150px;
+  background: #fff;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+@media (max-width: 340px) {
+  .shop-category-area .food-list li a img {
+    max-width: 140px;
+    max-height: 140px;
+  }
+}
+.shop-category-area .food-list li a .food-name {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.delivery-area .slick-slider {
+  margin: 0 -5px;
+}
+.delivery-area .slick-slide {
+  margin: 0 5px;
+}
+.delivery-area .delivery-card-active button {
+  background: #FFFAF5;
+  color: #091727;
+  position: absolute;
+  top: -50px;
+  height: 30px;
+  width: 40px;
+  border: 1px solid #091727;
+  line-height: 30px;
+  font-size: 20px;
+  transition: all 0.3s ease;
+}
+.delivery-area .delivery-card-active button:hover {
+  background: #FF5B2E;
+  color: #fff;
+  border: 1px solid #FF5B2E;
+}
+.delivery-area .delivery-card-active .pull-left {
+  right: 50px;
+}
+.delivery-area .delivery-card-active .pull-right {
+  right: 5px;
+}
+
+.featured-product-area {
+  background: #ebf0f5;
+}
+
+.discount-banner-area {
+  padding-top: 40px;
+}
+
+.banner-img-text {
+  padding: 30px;
+  background-position: top right;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  max-height: 340px;
+  border-radius: 5px;
+}
+
+.food-brand {
+  padding-bottom: 20px;
+}
+.food-brand img {
+  max-width: 150px;
+}
+@media (max-width: 991px) {
+  .food-brand img {
+    max-width: 100px;
+  }
+}
+
+.food-title {
+  font-size: 32px;
+  font-weight: 700;
+  width: 50%;
+  line-height: 40px;
+  margin-bottom: 10px;
+}
+@media (max-width: 991px) {
+  .food-title {
+    font-size: 27px;
+    font-weight: 500;
+    width: 100%;
+  }
+}
+
+.discount-amount {
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 20px;
+  display: block;
+}
+
+.discount-amount-title {
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 56px;
+}
+
+.food-title-second {
+  font-size: 30px;
+  font-weight: 700;
+  width: 70%;
+  line-height: 40px;
+  margin-bottom: 10px;
+}
+@media (max-width: 991px) {
+  .food-title-second {
+    font-size: 22px;
+    width: 100%;
+    line-height: 32px;
+  }
+}
+
+.amount-start {
+  font-size: 30px;
+  color: #fff;
+  font-weight: 600;
+  padding: 20px 18px;
+  border: 1px solid #fff;
+  border-radius: 5px;
+  display: inline-block;
+  line-height: 32px;
+}
+.amount-start .start-from {
+  font-size: 14px;
+  color: #fff;
+  display: block;
+  font-weight: 300;
+  line-height: 20px;
+}
+@media (max-width: 991px) {
+  .amount-start .start-from {
+    font-size: 13px;
+  }
+}
+@media (max-width: 991px) {
+  .amount-start {
+    padding: 10px;
+    font-size: 22px;
+  }
+}
+
+.brand-logo {
+  display: block;
+  font-size: 15px;
+  color: #fff;
+  font-weight: 300;
+  padding-bottom: 90px;
+}
+.brand-logo img {
+  width: 15px;
+  margin-right: 10px;
+}
+
+.second-banner {
+  padding: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  border-radius: 5px;
+  margin-bottom: 30px;
+  height: 100%;
+  max-height: 320px;
+  text-align: right;
+  display: flex;
+  justify-content: end;
+}
+
+.second-banner-conten {
+  width: 50%;
+  text-align: center;
+  position: relative;
+}
+@media (max-width: 991px) {
+  .second-banner-conten {
+    width: 100%;
+    text-align: end;
+  }
+}
+.second-banner-conten .logo-img {
+  max-width: 150px;
+  text-align: center;
+  display: inline;
+}
+.second-banner-conten .logo-img img {
+  max-width: 150px;
+  margin-bottom: 20px;
+}
+@media (max-width: 991px) {
+  .second-banner-conten .logo-img img {
+    max-width: 130px;
+    margin-bottom: 10px;
+  }
+}
+.second-banner-conten .little-paw-text {
+  font-size: 28px;
+  color: #fff;
+  line-height: 32px;
+  font-weight: 700;
+  margin: 15px 0;
+  padding-bottom: 100px;
+}
+@media (max-width: 991px) {
+  .second-banner-conten .little-paw-text {
+    font-size: 20px;
+    line-height: 28px;
+  }
+}
+.second-banner-conten .discount-text {
+  position: absolute;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -35%;
+}
+@media (max-width: 991px) {
+  .second-banner-conten .discount-text {
+    right: 0;
+    bottom: 50%;
+  }
+}
+
+.second-small-banner {
+  display: block;
+  text-align: left;
 }
 
 .shop-card-content {
