--- a/assets/sass/style.css
+++ b/assets/sass/style.css
@@ -62,6 +62,128 @@ img {
   display: flex;
 }
 
+.ptop-15 {
+  padding-top: 15px;
+}
+
+.p-left-14 {
+  padding-left: 14px;
+}
+
+.theme-color {
+  color: #FF5B2E;
+}
+
+.common-a {
+  color: #091727;
+  transition: all 0.3s ease-in-out;
+}
+.common-a:hover {
+  color: #FF5B2E;
+}
+
+.text-under {
+  text-decoration: underline;
+}
+
+.section-title {
+  font-size: 32px;
+  font-weight: 700;
+  padding-bottom: 30px;
+}
+@media (max-width: 991px) {
+  .section-title {
+    font-size: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .section-title {
+    font-size: 25px;
+  }
+}
+
+.section-subtitle {
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 30px;
+}
+@media (max-width: 991px) {
+  .section-subtitle {
+    font-size: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .section-subtitle {
+    font-size: 18px;
+  }
+}
+
+.shop-main-content {
+  margin-top: 40px;
+}
+
+.f-13 {
+  font-size: 13px;
+}
+
+.f-14 {
+  font-size: 14px;
+}
+
+.f-16-title {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.section-title {
+  font-size: 32px;
+  font-weight: 700;
+  padding-bottom: 30px;
+}
+@media (max-width: 991px) {
+  .section-title {
+    font-size: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .section-title {
+    font-size: 25px;
+  }
+}
+
+.section-subtitle {
+  font-size: 24px;
+  font-weight: 700;
+  padding-bottom: 30px;
+}
+@media (max-width: 991px) {
+  .section-subtitle {
+    font-size: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .section-subtitle {
+    font-size: 18px;
+  }
+}
+
+.shop-main-content {
+  margin-top: 40px;
+}
+
+.f-13 {
+  font-size: 13px;
+}
+
+.f-14 {
+  font-size: 14px;
+}
+
+.f-16-title {
+  font-size: 16px;
+  font-weight: 700;
+}
+
 .common-button {
   background-color: #FF5B2E;
   border: none;
@@ -199,6 +321,115 @@ img {
 }
 .single-card .product-sticker .new-sticker {
   background: #05894d;
+}
+
+.custome-pagination .custome-pagination-list li {
+  margin-right: 16px;
+}
+@media (max-width: 576px) {
+  .custome-pagination .custome-pagination-list li {
+    margin-right: 10px;
+  }
+}
+.custome-pagination .custome-pagination-list li .pagination-item {
+  background: #FF5B2E;
+  color: #FFFFFF;
+  width: 38px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 576px) {
+  .custome-pagination .custome-pagination-list li .pagination-item {
+    font-size: 13px;
+    width: 32px;
+  }
+}
+.custome-pagination .custome-pagination-list li .pagination-item:hover {
+  color: #091727;
+  background: #FFFAF5;
+}
+
+.form-select.ecom-custom-select {
+  font-size: 14px;
+  background-color: #FFFAF5;
+  outline: none;
+  box-shadow: none;
+  padding: 10px 15px;
+  border: none;
+  width: auto;
+}
+
+.form-check {
+  display: flex;
+  align-items: center;
+  line-height: 25px;
+}
+
+.form-check-input {
+  width: 18px;
+  height: 18px;
+}
+.form-check-input:hover {
+  cursor: pointer;
+}
+
+.form-check-input:checked {
+  background-color: #FF5B2E;
+}
+
+.form-check-input:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+.range-price li {
+  width: calc(50% - 5px);
+}
+
+.range-price li input {
+  width: 100%;
+  height: 45px;
+  padding: 0 10px;
+  border: 1px solid #bbb;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.irs--round .irs-bar {
+  background-color: #FF5B2E;
+}
+
+.irs--round .irs-handle {
+  background-color: #FF5B2E;
+  border-color: #FF5B2E;
+  box-shadow: none;
+}
+
+.irs--round .irs-handle.state_hover,
+.irs--round .irs-handle:hover {
+  background-color: #FF5B2E;
+}
+
+.irs--round .irs-handle {
+  width: 16px;
+  height: 16px;
+  top: 29px;
+}
+
+.irs--round .irs-from,
+.irs--round .irs-to,
+.irs--round .irs-single {
+  background-color: transparent;
+  color: #fff;
+}
+
+.irs--round .irs-from:before,
+.irs--round .irs-to:before,
+.irs--round .irs-single:before,
+.irs--round .irs-min,
+.irs--round .irs-max {
+  display: none;
 }
 
 .header-area {
@@ -1390,9 +1621,15 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-color: #FFFAF5;
+  height: 60px;
+}
+.by-item li a:hover {
+  border: 1px solid black;
+  background-color: white;
 }
 .by-item li a img {
-  max-width: 80px;
+  max-width: 70px;
   width: 100%;
 }
 .by-item li a p {
@@ -1403,11 +1640,6 @@ img {
 }
 .by-item li a:hover p {
   color: #FF5B2E;
-}
-
-.by-brand a {
-  background-color: #FFFAF5;
-  height: 50px;
 }
 
 .account-content {
@@ -2581,22 +2813,6 @@ img {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
-.section-title {
-  font-size: 32px;
-  font-weight: 700;
-  padding-bottom: 30px;
-}
-@media (max-width: 991px) {
-  .section-title {
-    font-size: 30px;
-  }
-}
-@media (max-width: 768px) {
-  .section-title {
-    font-size: 25px;
-  }
-}
-
 .follow-us {
   margin: 70px 0;
 }
@@ -2732,35 +2948,398 @@ img {
   }
 }
 
-.shop-card-content {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.custome-pagination .custome-pagination-list li {
-  margin-right: 16px;
-}
-@media (max-width: 576px) {
-  .custome-pagination .custome-pagination-list li {
-    margin-right: 10px;
+@media (max-width: 991px) {
+  .shop-left {
+    position: fixed;
+    left: -320px;
+    top: 0;
+    width: 320px;
+    background: #fff;
+    z-index: 11;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-height: 100vh;
+    overflow: hidden;
+    overflow-y: scroll;
+    transition: all 0.4s ease-in-out 0s;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .shop-left.active {
+    visibility: visible;
+    opacity: 1;
+    left: 0;
   }
 }
-.custome-pagination .custome-pagination-list li .pagination-item {
-  background: #FF5B2E;
-  color: #FFFFFF;
-  width: 38px;
+@media (max-width: 991px) and (max-width: 991px) {
+  .shop-left {
+    padding-top: 40px;
+  }
+}
+
+.closeShopbtn {
+  position: absolute;
+  color: rgba(0, 0, 0, 0.2);
+  top: 0;
+  right: 25px;
+  font-size: 45px;
+  display: block;
+  transition: all 0.3s ease-in-out;
+}
+.closeShopbtn:hover {
+  color: #FF5B2E;
+}
+@media (min-width: 991px) {
+  .closeShopbtn {
+    display: none;
+  }
+}
+
+#filter {
+  display: none;
+}
+@media (max-width: 991px) {
+  #filter {
+    display: block;
+  }
+}
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+  display: none;
+  transition: background-color 0.4s ease;
+}
+@media (max-width: 991px) {
+  .backdrop {
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+}
+
+.camp-link {
+  margin-top: 40px;
+}
+.camp-link .breadcumb {
+  display: flex;
+  font-size: 13px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 15px;
+}
+.camp-link .breadcumb li {
+  margin-right: 10px;
+}
+.camp-link .breadcumb li i {
+  margin-left: 10px;
+}
+.camp-link .breadcumb a {
+  color: #091727;
+  transition: all 0.3s ease-in-out;
+}
+.camp-link .breadcumb a:hover {
+  color: #FF5B2E;
+}
+
+.shop-main-content {
+  margin-bottom: 100px;
+}
+
+.shop-by-categories .shop-by-categories-list {
+  padding: 10px 0 25px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.shop-by-categories .shop-by-categories-list li {
+  padding: 10px 0;
+}
+.shop-by-categories .shop-by-categories-list li a {
+  color: #091727;
+  font-size: 14px;
+  font-weight: 700;
+  transition: all 0.2s ease-in-out;
+}
+.shop-by-categories .shop-by-categories-list li a:hover {
+  text-decoration: underline;
+  color: #FF5B2E;
+}
+.shop-by-categories .shop-by-categories-list li i {
+  text-align: end;
+}
+.shop-by-categories .shop-by-categories-list .custom-collapse .collapse-right {
+  display: none;
+}
+.shop-by-categories .shop-by-categories-list .custom-collapse.collapsed .collapse-down {
+  display: none;
+}
+.shop-by-categories .shop-by-categories-list .custom-collapse.collapsed .collapse-right {
+  display: block;
+}
+.shop-by-categories .shop-by-categories-list .collapse-list {
+  padding: 5px 0;
+}
+.shop-by-categories .shop-by-categories-list .collapse-link {
+  font-size: 13px;
+  font-weight: 400;
+}
+
+.shop-by-price {
+  padding: 30px 0 40px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.shop-by-brand {
+  padding-bottom: 40px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.check-list {
+  margin-top: 20px;
+}
+.check-list li a {
+  color: #091727;
+  transition: all 0.3s ease-in-out;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+.check-list li a:hover {
+  color: #FF5B2E;
+  text-decoration: underline;
+}
+
+.shop-by-color {
+  padding: 30px 0 40px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.shop-by-color .color-circle {
+  margin: 0 14px;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.shop-by-pets {
+  padding: 30px 0 40px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.cls-btn {
+  font-size: 12px;
+  color: #091727;
+  text-decoration: underline;
+  transition: all 0.3s ease-in-out;
+}
+.cls-btn:hover {
+  color: #FF5B2E;
+  text-decoration: underline;
+}
+
+.packaging-type {
+  padding: 30px 0 40px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.packaging-type-list {
+  margin-top: 20px;
+  display: flex;
+}
+.packaging-type-list .packaging-single-item {
+  margin-right: 10px;
+}
+.packaging-type-list .packaging-single-item a {
+  color: #091727;
+  font-size: 12px;
+  font-weight: 600;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 2px 8px;
+  transition: all 0.3s ease-in-out;
+}
+.packaging-type-list .packaging-single-item a:hover {
+  color: #FF5B2E;
+  border: 1px solid #FF5B2E;
+}
+
+.shop-by-weight {
+  padding: 30px 0 40px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.rating {
+  padding: 30px 0 40px;
+}
+
+.star-rating {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  justify-content: start;
+}
+.star-rating .back-stars {
+  display: flex;
+  color: gray;
+  position: relative;
+}
+.star-rating .back-stars i {
+  margin: 0 2px;
+}
+.star-rating .back-stars .front-stars {
+  display: flex;
+  color: #ffe600;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  transition: all 0.5s ease-in-out 0s;
+}
+
+.reset {
+  padding: 30px 0 40px;
+}
+
+.shop-right-top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+@media (max-width: 768px) {
+  .shop-right-top {
+    flex-direction: column-reverse;
+    align-items: start;
+    row-gap: 10px;
+  }
+}
+@media (max-width: 768px) {
+  .shop-right-top select {
+    min-width: 100%;
+    width: 100%;
+  }
+}
+.shop-right-top .show-and-sorting {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 768px) {
+  .shop-right-top .show-and-sorting {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+    width: 100%;
+  }
+}
+.shop-right-top .show-and-sorting p {
+  margin-right: 20px;
+}
+@media (max-width: 768px) {
+  .shop-right-top .show-and-sorting p {
+    margin-right: 0;
+  }
+}
+
+.option {
+  margin-top: 30px;
+}
+.option .option-list {
+  display: flex;
+  align-items: center;
+}
+.option .option-list li {
+  margin-right: 20px;
+}
+.option .option-list li:first-child {
+  background-color: #FFFAF5;
+  padding: 8px;
+}
+.option .option-list a {
+  color: #091727;
+  text-decoration: underline;
+  transition: all 0.3s ease-in-out;
+}
+.option .option-list a:hover {
+  color: #FF5B2E;
+}
+
+.shop-card-content {
+  margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+
+.description {
+  margin-top: 60px;
+}
+
+.accordian-area {
+  margin-top: 20px;
+}
+.accordian-area .accordion {
+  margin-top: 40px;
+  --bs-accordion-btn-focus-border-color: #ecfe86;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(242, 231, 11, 0.8);
+}
+.accordian-area .accordion .accordion-item .accordion-button:not(.collapsed) {
+  color: #091727;
+  background-color: #FF5B2E;
+}
+.accordian-area .accordion .accordion-item .accordion-button::after {
+  content: "\f067";
+  background-image: none;
+  font-family: fontawesome;
+}
+.accordian-area .accordion .accordion-item .accordion-button:not(.collapsed)::after {
+  content: "\f068";
+  background-image: none;
+  font-family: fontawesome;
+  transform: rotate(0deg);
+}
+.accordian-area .accordion .accordion-button:focus {
+  box-shadow: 0 0 0 0.25rem rgba(255, 91, 46, 0.5);
+}
+
+.shop-item-details-content {
+  margin: 40px 0 100px;
+}
+
+.chose-quantity {
+  display: flex;
+  -moz-column-gap: 6px;
+       column-gap: 6px;
+}
+
+.change-qty {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  border: 1px solid #bbb;
+  padding: 11px 6px;
+  border-radius: 5px;
+}
+.change-qty i {
+  font-weight: 100;
+  font-size: 13px;
+}
+
+.social-link-list li a {
+  height: 35px;
+  width: 35px;
+  border-radius: 5px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #FFFAF5;
+  transition: all 0.3s ease-in-out;
 }
-@media (max-width: 576px) {
-  .custome-pagination .custome-pagination-list li .pagination-item {
-    font-size: 13px;
-    width: 32px;
-  }
-}
-.custome-pagination .custome-pagination-list li .pagination-item:hover {
+.social-link-list li a i {
   color: #091727;
-  background: #FFFAF5;
+  transition: all 0.3s ease-in-out;
+}
+.social-link-list li a:hover {
+  background-color: #FF5B2E;
+}
+.social-link-list li a:hover i {
+  color: white;
 }/*# sourceMappingURL=style.css.map */
