--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -33,11 +33,17 @@
     margin-top: 40px;
 }
 
+.f-12{
+    font-size: 12px;
+}
 .f-13{
     font-size: 13px;
 }
 .f-14{
     font-size: 14px;
+}
+.f-15{
+    font-size: 15px;
 }
 
 .f-16-title{
@@ -50,4 +56,10 @@
 
 .price-title{
     
+}
+.fw-400{
+    font-weight: 400;
+}
+.fw-500{
+    font-weight: 500;
 }
