--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -39,6 +39,8 @@
 @import "pages/_ecommarce/ecommarce_shopPage";
 @import "pages/_ecommarce/ecommarce_shop_item-details";
 @import "pages/_ecommarce/ecommarce_cart";
+@import "pages/_ecommarce/wishlist";
+@import "pages/_ecommarce/checkout";
 
 
 
