--- a/assets/sass/layout/community/_communitySideNav.scss
+++ b/assets/sass/layout/community/_communitySideNav.scss
@@ -6,7 +6,7 @@
 }
 .community-sidenav {
     height: 100%;
-    width: 0;
+    width: 180px;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -16,17 +16,22 @@
     transition: 0.5s;
     margin-top: 107px;
     padding-bottom: 110px;
-    // @media (min-width:1399px) {
-    //     width: 180px;
-    // }
+    @media (max-width:1399px) {
+        width: 0;
+    }
 }
-  .sidenav .closebtn {
+.community-sidenav.main{
+    width: 180px;
+}
+
+.sidenav .closebtn {
     position: absolute;
     top: 0;
     right: 25px;
     font-size: 36px;
     margin-left: 50px;
-}
+  }
+
 .sidebar-list {
     padding: 10px;
     .single-side {
@@ -95,3 +100,9 @@
         }
     }
 }
+// .communityClosebtn {
+//     position: absolute;
+//     top: 200px;
+//     right: 190px;
+//     font-size: 36px;
+// }
