--- a/assets/sass/pages/community/_communityHome.scss
+++ b/assets/sass/pages/community/_communityHome.scss
@@ -4,7 +4,7 @@
     min-height: 100vh;
     position: relative;
     @media (max-width: 1399px) {
-        padding: 100px 0;
+        padding: 100px 0 50px 0;
     }
     @media (max-width: 992px) and (min-width:768px) {
         padding-right: 190px;
